<resources>
    <string name="app_name">Control</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!--Login-->
    <string name="bienvenida">Bienvenido a control</string>
    <string name="ingresar_datos">Ingresa tus datos</string>
    <string name="modificar_datos">Modifica tus datos</string>
    <string name="registrarse">Registrarse</string>
    <string name="correo">Correo</string>
    <string name="pass">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="ingresar">Iniciar Sesion</string>
    <string name="crear">Crear cuenta</string>
    <string name="recuperar">Recuperar Contraseña</string>
    <string name="descripcion_imagen">Contexto de una imagen</string>
    <string name="descripcion">Descripcion</string>
    <string name="cambiarFoto">Cambiar Foto</string>
    <string name="tipo">Tipo</string>
    <string name="iniciar">Iniciar Sesion</string>


</resources>