<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroUsuariosActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bienvenida"
                android:gravity="center"
                android:textSize="40dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingresar_datos"
                android:gravity="center"
                android:textSize="40dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/REGivFoto"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/ic_menu_camera"
                    android:contentDescription="@string/descripcion"/>
                <Button
                    android:id="@+id/REGbtnFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cambiarFoto"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/REGetcorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/correo"/>

            <EditText
                android:id="@+id/REGetpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/pass"/>

            <EditText
                android:id="@+id/REGetnombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/nombre"/>

            <EditText
                android:id="@+id/REGetTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/tipo"/>

            <Button
                android:id="@+id/REGbtnRegistrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrarse"
                android:layout_gravity="center"
                android:textSize="25dp"
                />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>