<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bienvenida"
                android:gravity="center"
                android:textSize="50dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingresar_datos"
                android:gravity="center"
                android:textSize="50dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/LOGetcorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:paddingBottom="30dp"
                android:hint="@string/correo"/>

            <EditText
                android:id="@+id/LOGetpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/pass"/>



            <Button
                android:id="@+id/LOGbtnIniciar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iniciar"
                android:layout_gravity="center"
                android:textSize="25dp"
                android:backgroundTint="@color/azulM"/>
            <Button
                android:id="@+id/LOGbtncrear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrarse"
                android:layout_gravity="center"
                android:textSize="25dp"
                android:backgroundTint="@color/azulM"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>